--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-instagram-embed": "^1.5.0",
+    "react-pdf": "^5.1.0",
     "react-schemaorg": "^1.2.0",
     "react-twitter-embed": "^3.0.3",
     "react-youtube": "^7.11.3",
